crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_empty_script.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(\"\")"
---
Script {
    lines: [],
}
