crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_followed_by_escaped_quote.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"    :k \"a\\\\\\\"b\"\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Text(
                            "a\\\"b",
                        ),
                        ctrl: false,
                        meta: false,
                        shft: false,
                    },
                ],
            },
            raw: "    :k \"a\\\\\\\"b\"",
        },
    ],
}
