crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_followed_by_quote.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":k \"a\\\\\"\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Text(
                        "a\\",
                    ),
                ],
            },
            raw: ":k \"a\\\\\"",
        },
    ],
}
