crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_text.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":k \\\"a\\\\\\\\b\\\"\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Text(
                        "a\\b",
                    ),
                ],
            },
            raw: ":k \"a\\\\b\"",
        },
    ],
}
