crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_keys_with_single_modifier.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":k C-a\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Text(
                            "a",
                        ),
                        ctrl: true,
                        meta: false,
                        shft: false,
                    },
                ],
            },
            raw: ":k C-a",
        },
    ],
}
