crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_keys_with_stacked_modifiers.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":k C-M-S-enter\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Enter,
                        ctrl: true,
                        meta: true,
                        shft: true,
                    },
                ],
            },
            raw: ":k C-M-S-enter",
        },
    ],
}
