crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_mixed_text_and_directives.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"# Scenario\"#, r#\"\"#, r#\":$ cargo --version\"#,\nr#\":t new-session -d -s fixture \"sleep 3600\"\"#, r#\":p runner:0.0\"#,\nr#\":k down \"abc\"\"#, r#\":s /foo/x\"#, r#\"\"#, r#\"Notes.\"#, r#\"\"#,].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Text,
            raw: "# Scenario",
        },
        Line {
            kind: Text,
            raw: "",
        },
        Line {
            kind: Sh {
                args: NonEmpty {
                    head: "cargo",
                    tail: [
                        "--version",
                    ],
                },
            },
            raw: ":$ cargo --version",
        },
        Line {
            kind: Tmux {
                args: NonEmpty {
                    head: "new-session",
                    tail: [
                        "-d",
                        "-s",
                        "fixture",
                        "sleep 3600",
                    ],
                },
            },
            raw: ":t new-session -d -s fixture \"sleep 3600\"",
        },
        Line {
            kind: Pane {
                target: "runner:0.0",
            },
            raw: ":p runner:0.0",
        },
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Down,
                        ctrl: false,
                        meta: false,
                        shft: false,
                    },
                    Key {
                        kind: Text(
                            "abc",
                        ),
                        ctrl: false,
                        meta: false,
                        shft: false,
                    },
                ],
            },
            raw: ":k down \"abc\"",
        },
        Line {
            kind: Snap {
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: ":s /foo/x",
        },
        Line {
            kind: Text,
            raw: "",
        },
        Line {
            kind: Text,
            raw: "Notes.",
        },
    ],
}
