crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_snap_with_count_flag.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":snap --count 1 /foo/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 1,
                duration: 1s,
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: ":snap --count 1 /foo/x",
        },
    ],
}
