crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_snap_with_duration_flag.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap --duration 100ms /foo/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 100ms,
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: "    :snap --duration 100ms /foo/x",
        },
    ],
}
