crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_snap_with_grapheme_replacement.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap /foo/é\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                color: false,
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "e\u{301}",
                    },
                ],
            },
            raw: "    :snap /foo/e\u{301}",
        },
    ],
}
